Remove linux cmake install