@@ -28,18 +28,6 @@ function install_linux_environment()
     pushd $HOME/bin
 
     echo "GCC version: `gcc --version`"
-    # install new version cmake
-    CMAKE_VERSION="3.7.2"
-    CMAKE_DOWNLOAD_URL="https://cmake.org/files/v3.7/cmake-${CMAKE_VERSION}.tar.gz"
-    echo "Download ${CMAKE_DOWNLOAD_URL}"
-    ${CURL} -O ${CMAKE_DOWNLOAD_URL}
-    tar -zxf "cmake-${CMAKE_VERSION}.tar.gz"
-    cd "cmake-${CMAKE_VERSION}"
-    ./configure > /dev/null
-    make -j2 > /dev/null
-    sudo make install > /dev/null
-    echo "CMake Version: `cmake --version`"
-    cd ..
 
     # install new version binutils
     BINUTILS_VERSION="2.27"
@@ -130,12 +118,6 @@ if [ "$BUILD_TARGET" == "linux_cocos_new_test" ]; then
     install_linux_environment
     exit 0
 fi
-
-# fix for jdk9/10
-# if [ $TRAVIS_OS_NAME == "linux" ]; then
-#     export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.xml.bind'
-#     # export SDKMANAGER_OPTS="--add-modules java.se.ee"
-# fi
 
 # build pull request
 if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then
